--- a/components/sass/modules/_options.scss
+++ b/components/sass/modules/_options.scss
@@ -98,6 +98,10 @@
         z-index: 99;
       }
 
+      &:hover {
+        background-color: darken(#3c3c3c, 6%);
+      }
+
     }
     .option1 {
       padding: 25px;
